Fix Java 21 compiler warnings (Runtime.exec(:String) deprecation) in ProcessUtils.